@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add < and > attribute prefixes (read only and write-only)
+
 0.006     2017-10-20 20:37:09-07:00 America/Los_Angeles
 
     - Allow custom module versions in inlined copies
